# llm-email-classifier-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  READMEJEFF.md  READMEJEFF2.md  email_classifier_template.py  pyproject.toml  requirements.txt  run.py  sample_email.json  setup.py  test_one_email.py
chroma_index/: chroma.sqlite3
data/chroma_index/: chroma.sqlite3
data/inbox/: email_001.json  email_002.json  email_003.json  email_004.json  email_005.json
data/response_examples/: complaints.txt  feedback.txt  inquiries.txt  other.txt  support_requests.txt
scripts/: build_chroma_index.py  email_classifier_template.py  run_batch_demo.py  run_single_email.py
src/: config.py  data.py  email_automation.py  email_history.py  email_processor.py  main.py  mock_services.py  openai_helpers.py  prompting.py  rag_retriever.py  sample_emails.py  user_profile.py  validation.py
src/email_logs/: angry.customer_at_example.com.jsonl  curious.shopper_at_example.com.jsonl  d_at_e_dot_com.json  feedback_at_example_dot_com.json  happy.user_at_example.com.jsonl  partner_at_example.com.jsonl  returning_user_at_example_dot_com.json  tech.user_at_example.com.jsonl  unknown_at_example_dot_com.json  user_at_example_dot_com.json
src/email_processing/: email_automation.py  email_processor.py
src/email_processing/email_logs/: d_at_e_dot_com.json  feedback_at_example_dot_com.json  unknown_at_example_dot_com.json  user_at_example_dot_com.json
src/helpers/: openai_helpers.py  prompting.py
src/llm_email_classifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models/: rag_retriever.py
src/rag/: document_loader.py  rag_chain.py  retriever.py  vector_store.py
src/scripts/: build_chroma_index.py  run_batch_demo.py  run_single_email.py
src/utils/: response_loader.py
tests/: manual_test_run.py  test_email_processor.py  test_integration.py  test_rag_pipeline.py  test_validation.py
