[project]
name = "llm_email_classifier"
version = "0.1.0"
description = "LLM-powered email classification and automation system"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = []
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
