[project]
name = "llm_email_classifier"
version = "0.1.0"
description = "LLM-powered email classification and automation system"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "anyio==4.9.0",
    "asgiref==3.8.1",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "black==25.1.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "chroma-hnswlib==0.7.6",
    "chromadb==1.0.7",
    "click==8.1.8",
    "coloredlogs==15.0.1",
    "dataclasses-json==0.6.7",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docker==7.1.0",
    "durationpy==0.9",
    "email-validator==2.2.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.9",
    "filelock==3.18.0",
    "flake8==7.2.0",
    "flatbuffers==25.2.10",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "google-auth==2.39.0",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.1",
    "grpcio==1.71.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "kubernetes==32.0.1",
    "langchain==0.1.17",
    "langchain-community==0.0.36",
    "langchain-core==0.1.53",
    "langchain-openai==0.0.8",
    "langchain-text-splitters==0.0.2",
    "langsmith==0.1.147",
    "llm-email-classifier==0.1.0",
    "markdown-it-py==3.0.0",
    "marshmallow==3.26.1",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mmh3==5.1.0",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "mypy-extensions==1.1.0",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "onnxruntime==1.19.2",
    "openai==1.77.0",
    "protobuf==5.29.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycodestyle==2.13.0",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.9.1",
    "pyflakes==3.3.2",
    "pygments==2.19.1",
    "pypika==0.48.9",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "rpds-py==0.24.0",
    "rsa==4.9.1",
    "setuptools==75.8.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "starlette==0.45.3",
    "sympy==1.14.0",
    "tenacity==8.5.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "typer==0.15.3",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "watchfiles==1.0.5",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "xz==5.6.4",
    "yarl==1.20.0",
    "zipp==3.21.0",
    "zlib==1.2.13",
    "zstandard==0.23.0"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
